force-app/main/default/objects/User_Credentials__c/User_Credentials__c.object-meta.xml
<CustomObject>
    <label>User Credentials</label>
    <nameField>
        <displayFormat>UC-{0000}</displayFormat>
        <label>User Credentials Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>