force-app/main/default/objects/User_Credentials__c/fields/Password_Hash__c.field-meta.xml
<CustomField>
    <fullName>Password_Hash__c</fullName>
    <label>Password Hash</label>
    <length>80</length>
    <type>Text</type>
</CustomField>