force-app/main/default/objects/User_Credentials__c/fields/Password_Salt__c.field-meta.xml
<CustomField>
    <fullName>Password_Salt__c</fullName>
    <label>Password Salt</label>
    <length>80</length>
    <type>Text</type>
</CustomField>