force-app/main/default/objects/User_Credentials__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <externalId>true</externalId>
    <label>Username</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>